--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>FirebaseCrud</title>
+  <title>Citas_app</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -11,7 +11,7 @@
 </head>
 <body>
   <app-root>
-    <img style="margin-left: 40vw; margin-top: 20vh;" src="https://progblog.io/img/logo-green.png">
+    <p>Loading...</p>
   </app-root>
 </body>
 </html>
